--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>彈跳球遊戲</title>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      #myCanvas {
-        background-color: black;
-      }
-    </style>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <canvas id="myCanvas" width="1000px" height="600px"></canvas>
