--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <canvas id="myCanvas" width="1000px" height="600px"></canvas>
+    <section class="main-Area">
+      <div class="text-area">
+        <h1>彈跳球遊戲</h1>
+        <p>10秒內打完磚塊</p>
+        <button class="start">開始遊戲</button>
+        <button class="restart-game">重啟遊戲</button>
+        <p class="countdown">倒數 <span class="secs">10</span> 秒</p>
+      </div>
+      <div class="game-area">
+        <canvas id="myCanvas" width="1000px" height="600px"></canvas>
+      </div>
+    </section>
     <script src="./app.js"></script>
   </body>
 </html>
