remove restart button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1>彈跳球遊戲</h1>
         <p>10秒內打完磚塊</p>
         <button class="start">開始遊戲</button>
-        <button class="restart-game">重啟遊戲</button>
-        <p class="countdown">倒數 <span class="secs">10</span> 秒</p>
+        <p class="countdown"></p>
       </div>
       <div class="game-area">
         <canvas id="myCanvas" width="1000px" height="600px"></canvas>
